# CRUD

./: README.md  pyproject.toml
crud/: __init__.py  base.py  filesystem.py  local_storage.py  s3_storage.py  storage.py  storage_interface.py
scripts/: run.py  settings.py
