[tool.poetry]
name = "crud"
version = "0.0.0"
description = "A simple, extendable CRUD interface that abstracts the backend storage system."
authors = ["Freddy Wordingham <freddy@digilab.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typeguard = "^4.1.5"
boto3 = "^1.34.39"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
